# machine

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo_check_final.txt  cargo_check_final_2.txt  cargo_check_output.txt  cargo_check_phase3.txt  cargo_check_phase3_v2.txt  gen_bf.py  install.sh
.github/workflows/: build.yml  release.yml
docs/: commands.md  installation.md  troubleshooting.md
src/: lib.rs  main.rs
src/commands/: anomalies.rs  battery.rs  boot.rs  clean.rs  compare.rs  diff.rs  disk.rs  doctor.rs  explain.rs  forecast.rs  history.rs  investigate.rs  latency.rs  memory.rs  mod.rs  net.rs  ports.rs  process.rs  pulse.rs  report.rs  security.rs  services.rs  snapshot.rs  status.rs  thermal.rs  trace.rs  watch.rs  why.rs  wtf.rs
src/core/: analysis.rs  bf_cache.bf  mod.rs  network.rs  proc.rs  recommendations.rs
src/storage/: db.rs
src/ui/: colors.rs  format.rs
