[package]
name = "machine"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
notify = "6.1"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
